# LatAnalyze-legacy

./: .gitignore  AUTHORS  Makefile.am  TODO  acinclude.m4  alloc.h  bootstrap.sh  build.sh  configure.ac  configure.in  ltmain.sh.diff  malloc.c  realloc.c
doc/: Makefile.am  error.texi  latanalyze.texi  latanalyze.vim  mat.texi
examples/: Makefile.am  ex_endian.c  ex_fit.c  ex_getmat.c  ex_getmat_f1  ex_getmat_f2  ex_getmat_man  ex_io.c  ex_io.xml  ex_mat.c  ex_min.c  ex_plot.c  ex_rand.c  ex_rand.seed  ex_rand.xml  ex_stat.c
latan/: Makefile.am  error.c  error.h  globals.c  globals.h  hadron.c  hadron.h  includes.h  io.c  io.h  latan_blas.c  latan_blas.h  latan_error.c  latan_error.h  latan_fit.c  latan_fit.h  latan_globals.c  latan_globals.h  latan_hadron.c  latan_hadron.h  latan_includes.h  latan_io.c  latan_io.h  latan_io.text.c  latan_io_ascii.c  latan_io_ascii.h  latan_io_xml.c  latan_io_xml.h  latan_mass.c  latan_mass.h  latan_mat.c  latan_mat.h  latan_mat_cublas.c  latan_mat_cublas.h  latan_math.c  latan_math.h  latan_min_gsl.c  latan_min_gsl.h  latan_min_minuit2.cpp  latan_min_minuit2.h  (+26 more)
utils/: Makefile.am  latan_create_rg_state.c  latan_get_mass.c  latan_info.c  latan_mat_bench.c  latan_rs_add.c  latan_rs_binop.c  latan_rs_binops.c  latan_rs_mul.c  latan_rs_read.c  latan_rs_sub.c  latan_rs_subsamp.c  latan_rs_unop.c
