noinst_PROGRAMS = \
	ex_fit		\
	ex_io		\
	ex_mat		\
	ex_min		\
	ex_getmat	\
	ex_plot		\
	ex_rand		\
	ex_stat
	
ex_io_SOURCES		= ex_io.c
ex_io_CFLAGS		= -g -O2
ex_io_LDFLAGS		= -L../latan/.libs -llatan -fopenmp

ex_fit_SOURCES		= ex_fit.c
ex_fit_CFLAGS		= -g -O2
ex_fit_LDFLAGS		= -L../latan/.libs -llatan

ex_mat_SOURCES		= ex_mat.c
ex_mat_CFLAGS		= -g -O2
ex_mat_LDFLAGS		= -L../latan/.libs -llatan

ex_min_SOURCES		= ex_min.c
ex_min_CFLAGS		= -g -O2
ex_min_LDFLAGS		= -L../latan/.libs -llatan -fopenmp

ex_getmat_SOURCES	= ex_getmat.c
ex_getmat_CFLAGS	= -g -O2
ex_getmat_LDFLAGS	= -L../latan/.libs -llatan

ex_plot_SOURCES		= ex_plot.c
ex_plot_CFLAGS		= -g -O2
ex_plot_LDFLAGS		= -L../latan/.libs -llatan

ex_rand_SOURCES		= ex_rand.c
ex_rand_CFLAGS		= -g -O2
ex_rand_LDFLAGS		= -L../latan/.libs -llatan

ex_stat_SOURCES		= ex_stat.c
ex_stat_CFLAGS		= -g -O2
ex_stat_LDFLAGS		= -L../latan/.libs -llatan

ACLOCAL_AMFLAGS = -I .buildutils/m4